# AEGIS

./: .gitignore  README.md  agent.py  app_tester.py  code_executor.py  info_for_agent.md  judge_agent.py  llm_client.py  log_manager.py  main.py  manager_agent.py  pyproject.toml  react_agent.py  rpd.md  run_judge.py  run_judge.sh  идеи.md
action_api/: __init__.py  executor.py  models.py  policy.py  registry.py
action_api/actions/: control.py  file.py  manager.py  python.py  terminal.py
dataset_collector/: collector.py  embeddings.py  models.py  parser.py  selector.py
datasets/: easy.json  hard.json  middle.json
genered_datasets/: coder_dataset.json  manager_dataset.json
logs/run_20251126_022417_36309/: coder_chat.md  manager_chat.md
notes/: идеи.md
notes/easy_report/: results.csv  results.html  results.ipynb
notes/middle_report/: middle.csv
web_interface/: README.md  server.py
web_interface/static/: index.html  script.js  style.css
