[project]
name = "aegis"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Malyshev",email = "malyshev.sa@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asteval==1.0.7",
    "fastapi==0.115.8",
    "openai==1.61.0",
    "pydantic==2.10.6",
    "PySide6==6.10.0",
    "pyvirtualdisplay==3.0",
    "pyautogui==0.9.54",
    "uvicorn==0.34.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
